[gd_scene load_steps=7 format=3 uid="uid://b8ragnnvbnnx6"]

[ext_resource type="Script" path="res://Scenes/Spells/spell.gd" id="1_253wt"]
[ext_resource type="PackedScene" uid="uid://vybc4s4012l7" path="res://Scenes/Components/hitbox_component.tscn" id="2_1724c"]
[ext_resource type="Material" uid="uid://fu6mh7ku7ux4" path="res://Textures/SpellEffects/explosion.tres" id="3_hwplb"]
[ext_resource type="Material" uid="uid://cexkqtelpn767" path="res://Textures/SpellEffects/fire.tres" id="3_iwlsn"]
[ext_resource type="Material" uid="uid://18f488jmr2v1" path="res://Textures/SpellEffects/line.tres" id="5_2643e"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_cem4i"]
points = PackedVector2Array(20, 2.08165e-12, -20, 2.08165e-12, 2.08165e-12, -40)

[node name="Spell" type="Node2D"]
script = ExtResource("1_253wt")
explosion = ExtResource("3_hwplb")
burning = ExtResource("3_iwlsn")
line = ExtResource("5_2643e")

[node name="HitboxComponent" parent="." instance=ExtResource("2_1724c")]
rotation = 1.5708

[node name="HitboxShape" type="CollisionShape2D" parent="HitboxComponent"]
show_behind_parent = true
shape = SubResource("ConvexPolygonShape2D_cem4i")

[node name="Effect" type="GPUParticles2D" parent="."]
scale = Vector2(3, 3)
lifetime = 3.0
trail_enabled = true

[node name="LifeTime" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
